--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jasongrimes/paginator",
+    "name": "ondkal/paginator",
     "type": "library",
     "description": "A lightweight PHP paginator, for generating pagination controls in the style of Stack Overflow and Flickr. The 'first' and 'last' page links are shown inline as page numbers, and excess page numbers are replaced by ellipses.",
     "keywords": ["paginator", "pagination", "pager"],
@@ -9,6 +9,10 @@
         {
             "name": "Jason Grimes",
             "email": "jason@grimesit.com"
+        }, 
+        {
+            "name": "Ondrej Kalny",
+            "email": "ondrej@kalny.name"
         }
     ],
     "require": {
